Update to the latest version of the library (and dependencies)

--- a/src/components/element-example.html
+++ b/src/components/element-example.html
@@ -7,7 +7,7 @@
 		<div ui-segment>
 			<div ui-container class="stackable two column grid">
 				<div class="six wide column">
-					<content></content>
+					<slot></slot>
 				</div>
 
 				<div class="ten wide column">
